--- a/core/src/main/resources/i18n/spark_i18n_pl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pl.properties
@@ -27,9 +27,9 @@
 ##
 ## REVISION HISTORY (by Spark version):
 ##
-## Tlumaczenie do wersji 2.8.1-911
+## Tlumaczenie do wersji spark_2_9_0-20170814 (nightly)
 ##
-## Tlumaczenie stworzyl i na biezaco korektuje Martini26 (marek_marcin@o2.pl) - dalsze korekty rodakow mile widziane ;)
+## Tlumaczenie wersji pl stworzyl i na biezaco korektuje TEAM MOPR Bytom (informatycy@mopr.bytom.pl) - korekty mile widziane ;)
 
 accept = Akceptuj
 active = Aktywny
@@ -40,6 +40,8 @@ apply = Zatwierd\u017a
 available = Dost\u0119pny
 broadcast = Wiadomo\u015b\u0107 grupowa
 cancel = Anuluj
+close = Zamknij
+details = Szczeg\u00F3\u0142y
 close = Zamknij
 create = Utw\u00f3rz
 date = Data
@@ -78,7 +80,6 @@ action.save = Zapisz
 action.select.all = Zaznacz wszystko
 
 button.accept = Akceptuj
-button.reject = Odrzu\u0107
 button.add = Dodaj
 button.add.a.contact = Dodaj kontakt
 button.add.bookmark = Dodaj zak\u0142adk\u0119
@@ -107,10 +108,12 @@ button.login = Zaloguj
 button.new = Nowy
 button.profile = Profil
 button.quit = Wyjd\u017a
+button.re.detect = Wykryj ponownie
 button.reconnect = Po\u0142\u0105cz ponownie
 button.reconnect2 = Po\u0142\u0105cz ponownie
 button.refresh = Od\u015bwie\u017c
 button.register = Zarejestruj
+button.reject = Odrzu\u0107
 button.remove.bookmark = Usu\u0144 zak\u0142adk\u0119
 button.roster = Lista wsp\u00f3\u0142dzielona
 button.save = Zapisz
@@ -126,12 +129,18 @@ button.update = Aktualizuj
 button.view.notes = Zobacz notatki
 button.view.profile = Zobacz pe\u0142ny profil
 button.view.tasklist = Zobacz list\u0119 zada\u0144
-button.re.detect = Wykryj ponownie
+button.check.validity = Sprawd\u017A wa\u017Cno\u015B\u0107
+button.show.certificate = Poka\u017C certyfikat
+
+table.column.certificate.subject = Temat
+table.column.certificate.validity = Wa\u017Cno\u015B\u0107
+table.column.certificate.exempted = Zwolniony
 
 checkbox.allow.buzz = Zezw\u00f3l u\u017cytkownikom na przesy\u0142anie alert\u00f3w
 checkbox.auto.discover.port = Automatycznie wykryj hosta i port
 checkbox.auto.login = Automatyczne logowanie
 checkbox.login.as.invisible = Zaloguj jako niewidoczny
+checkbox.login.anonymously = Zaloguj anonimowo
 checkbox.disable.chat.history = Wy\u0142\u0105cz histori\u0119 rozm\u00f3w
 checkbox.sort.asc.history = Sortuj histori\u0119 kontaktu wed\u0142ug daty rosn\u0105co
 checkbox.disable.prev.chat.history = Wy\u0142\u0105cz histori\u0119 rozmowy w okienku
@@ -179,6 +188,18 @@ checkbox.use.hostname.as.resource = U\u017cyj nazwy hosta jako zasobu
 checkbox.use.version.as.resource = U\u017cyj wersji Sparka jako zasobu
 checkbox.accept.all.certificates = Akceptuj wszystkie certyfikaty (podpisane/wygas\u0142e/niezaufane)
 checkbox.disable.hostname.verification = Wy\u0142\u0105cz weryfikacj\u0119 certyfikatu nazwy hosta (niezalecane)
+checkbox.accept.all = Akceptuj wszystkie
+checkbox.accept.expired = Akceptuj wygas\u0142e
+checkbox.accept.not.valid.yet = Akceptuj jeszcze niewa\u017Cne
+checkbox.accept.self.signed = Akceptuj samopodpisane
+checkbox.accept.revoked = Akceptuj cofni\u0119te
+checkbox.check.crl = Sprawdzaj CRL
+checkbox.check.ocsp = Sprawdzaj OCSP
+checkbox.allow.soft.fail = Zezwalaj na lekk\u0105 polityk\u0119 b\u0142\u0119d\u00F3w
+checkbox.on.exception.list = W\u0142\u0105cz list\u0119 wyj\u0105tk\u00F3w
+radio.encryptionmode.required = Wymagany
+radio.encryptionmode.ifpossible = Je\u015Bli mo\u017Cliwy
+radio.encryptionmode.disabled = Wy\u0142\u0105czony
 
 delete.log.permanently = Usu\u0144 dziennik zdarze\u0144
 delete.permanently = Usun\u0105\u0107 trwale?
@@ -198,6 +219,8 @@ group.search.form = Wyszukaj
 group.search.results = Wyniki wyszukiwania
 group.chat.name.notification = Widz\u0119 Twoj\u0105 nazw\u0119
 group.chat.name.match = Twoje imi\u0119 zosta\u0142o u\u017cyte w rozmowie:
+group.send_config.error = Wyst\u0105pi\u0142 wyj\u0105tek podczas pr\u00F3by zapisania zaktualizowanego formularza
+group.encryption_mode = Tryb szyfrowania
 
 label.na = brak
 label.cell = Tel. kom\u00f3rkowy
@@ -272,6 +295,7 @@ label.received = Otrzymane
 label.rename.to = Zmie\u0144 nazw\u0119
 label.resource = Zasoby
 label.response.timeout = Czas oczekiwania na odpowied\u017a (sek.)
+label.reconnect.delay = Op\u00F3\u017Anienie powt\u00F3rnego po\u0142\u0105czenia (sek) (wymaga restartu)
 label.room = Pok\u00f3j
 label.room.name = Nazwa pokoju
 label.room.topic = Temat pokoju
@@ -296,6 +320,7 @@ label.user.on.public.network = U\u017cytkownik jest w sieci publicznej
 label.username = Nazwa u\u017cytkownika
 label.version = Wersja
 label.web.page = Strona WWW
+label.work = Praca
 label.xmpp.port = Port XMPP
 label.krb.realm = Realm
 label.krb.kdc = KDC
@@ -313,6 +338,20 @@ label.apple.keychain = Zastosuj KeyChain
 label.add.to.roster = Dodaj u\u017cytkownika do Twojej listy
 label.audio.device = Urz\u0105dzenie audio
 label.video.device = Urz\u0105dzenie video
+label.certificate.version = Wersja
+label.certificate.serial.number = Numer seryjny
+label.certificate.signature.value = Podpis
+label.certificate.signature.algorithm = Algorytm podpisu
+label.certificate.issuer = Zg\u0142aszaj\u0105cy
+label.certificate.subject = Temat
+label.certificate.not.before = Niewa\u017Cny przed
+label.certificate.not.after = Niewa\u017Cny po
+label.certificate.public.key = Klucz publiczny
+label.certificate.public.key.algorithm = Algorytm klucza publicznego
+label.certificate.issuer.unique.id = Unikalne ID zg\u0142aszaj\u0105cego
+label.certificate.subject.unique.id = Unikalne ID tematu
+label.certificate.add.certificate.to.truststore = Dodaj certyfikat do zaufanych
+label.certificate.status = Status certyfikatu.
 
 menuitem.about = O programie
 menuitem.actions = Czynno\u015bci
@@ -424,8 +463,8 @@ menuitem.collapse.all.groups = Zwi\u0144 wszystkie grupy
 menuitem.inivite.again = Zapro\u015b ponownie
 menuitem.chatframe.option = Opcje
 menuitem.add.groupchat.invitetobookmark = Automatycznie zapro\u015b u\u017cytkownik\u00f3w do zaznaczonego pokoju
+menuitem.certificate.files.filter = Pliki certyfikat\u00F3w (*.cer), (*.crt), (*.der)
 
-message.invite.to.groupchat = {0} zaprasza Ci\u0119 do rozmowy grupowej
 message = Wiadomo\u015b\u0107
 message.account.create = Utw\u00f3rz nowe konto 
 message.account.created = Nowe konto zosta\u0142o utworzone
@@ -504,6 +543,14 @@ message.enter.valid.jid = Wpisz poprawny Jabber ID
 message.enter.xmpp = Podaj login i has\u0142o us\u0142ugi XMPP
 message.enter.yahoo = Podaj login i has\u0142o us\u0142ugi Yahoo
 message.error.during.file.transfer = Wyst\u0105pi\u0142 b\u0142\u0105d podczas wysy\u0142ania pliku
+message.error.must.use.reserved.nick = Musisz użyć zarezerwowanego nicku dla tego pokoju.
+message.error.nickname.in.use = Ten nick jest ju\u017C zaj\u0119ty przez innego u\u017Cytkownika.
+message.error.no.permission.create.room = Nie masz uprawnie\u0144 do tworzenia pokoju.
+message.error.no.response = Serwer nie odpowiada.
+message.error.not.member = Nie jeste\u015B cz\u0142onkiem tego pokoju. Pok\u00F3j wymaga cz\u0142onkostwa.
+message.error.room.not.exist = Pok\u00F3j, do kt\u00F3rego pr\u00F3bujesz do\u0142\u0105czy\u0107 nie istnieje.
+message.error.room.password.incorrect = Nieprawid\u0142owe has\u0142o do pokoju.
+message.error.unable.join.room = Do\u0142\u0105czenie do pokoju jest niemo\u017Cliwe.
 message.file.exists.question = Plik ju\u017c istnieje, zast\u0105pi\u0107?
 message.file.size = Rozmiar pliku: {0}
 message.file.transfer.canceled = Anulowa\u0142e\u015b wysy\u0142anie pliku
@@ -525,11 +572,15 @@ message.gateway.nickname.error = Pole 'pseudonim' nie mo\u017ce by\u0107 puste
 message.general.error = Utracono po\u0142\u0105czenie z serwerem z powodu {0}
 message.generic.reconnect.message = Utracono po\u0142\u0105czenie z serwerem, aby zalogowa\u0107 si\u0119 ponownie kliknij 'Po\u0142\u0105cz ponownie'
 message.idle.for = Nieaktywny przez {0}
+message.image.not.square = Obraz nie jest kwadratem
+message.image.small.resolution = Rozmiar obrazu jest mniejszy ni\u017C 32x32 piksele
+message.image.suggestion = Zalecany rozmiar obrazu to 64x64 piksele. Zignoruj ostrze\u017Cenie lub wybierz inny obraz 
 message.image.too.large = Za du\u017cy plik, obraz musi mie\u0107 rozmiar 16k lub mniejszy
 message.invalid.jabber.id = Nieprawid\u0142owy Jabber ID
 message.invalid.jid.error = Nieprawid\u0142owy  JID
 message.invalid.status = Nieprawid\u0142owy opis statusu
 message.invalid.username.password = Niepoprawna nazwa u\u017cytkownika lub has\u0142o
+message.invite.to.groupchat = {0} zaprasza Ci\u0119 do grupowego czatu
 message.invite.users.to.conference = Zapro\u015b u\u017cytkownik\u00f3w do pokoju konferencyjnego
 message.is.shared.group = {0} jest grup\u0105 wsp\u00f3\u0142dzielon\u0105
 message.is.typing.a.message = {0} pisze wiadomo\u015b\u0107
@@ -584,8 +635,8 @@ message.room.destruction.reason = Pow\u00f3d usuni\u0119cia pokoju?
 message.room.information.for = Informacje o pokoju {0}
 message.save.profile = Aby zapisa\u0107 zmiany w profilu, naci\u015bnij Zapisz
 message.search.for.contacts = Szukaj kontakt\u00f3w
-message.search.for.other.people = Szukaj innych os\u00f3b na serwerze
 message.search.input.short = Podaj przynajmniej dwie litery.
+message.search.for.other.people = Szukaj innych os\u00f3b na serwerze
 message.search.service.not.available = Nie mo\u017cna skontaktowa\u0107 si\u0119 z us\u0142ug\u0105 wyszukiwania
 message.searching.please.wait = Trwa wyszukiwanie, prosz\u0119 czeka\u0107
 message.select.add.room.to.add = Wybierz pok\u00f3j do dodania do listy us\u0142ug
@@ -602,6 +653,7 @@ message.server.unavailable = Nie mo\u017cna po\u0142\u0105czy\u0107 z serwerem: 
 message.service.already.exists = Us\u0142uga znajduje si\u0119 ju\u017c na li\u015bcie
 message.shared.group = Grupa wsp\u00f3\u0142dzielona
 message.spark.secure = Spark dzia\u0142a w trybie bezpiecznym
+message.spark.unsecure = Spark nie dzia\u0142a w trybie bezpiecznym (po\u0142\u0105czenie z serwerem nie jest szyfrowane).
 message.specify.contact.jid = Prosz\u0119 poda\u0107 JID kontaktu (np. ddman@jabber.org)
 message.specify.group = Okre\u015b grup\u0119, do kt\u00f3rej doda\u0107 nowego u\u017cytkownika
 message.specify.information.for.conference = Okre\u015bl informacje o pokoju konferencyjnym
@@ -704,6 +756,7 @@ tab.personal = Osobiste
 tab.proxy = Proxy
 tab.sso = SSO
 tab.pki = PKI
+tab.certificates = Certyfikaty
 
 title.about = O programie
 title.account.create.registration = Rejestracja konta
@@ -830,7 +883,6 @@ title.sounds = D\u017awi\u0119ki
 title.spark.preferences = Ustawienia Spark
 title.start.chat = Rozpocznij rozmow\u0119
 title.status.message = Status
-title.subscription.request = Pro\u015bba o dodanie
 title.task.notification = Powiadomienie dla zadania
 title.tasks = Zadania
 title.transports = Bramy
@@ -841,8 +893,12 @@ title.view.bookmarks = Poka\u017c ulubione
 title.view.profile.for = Informacje o profilu u\u017cytkownika {0}
 title.view.room.information = Poka\u017c informacj\u0119 o pokoju
 title.waiting.to.call = Oczekiwanie na rozmow\u0119 g\u0142osow\u0105
+title.warning = Ostrze\u017Cenie
 title.xmpp.registration = Ustawienia konta XMPP
 title.yahoo.registration = Ustawienia konta Yahoo
+title.appearance.showVCards = Pokazuj VCards na li\u015Bcie kontakt\u00F3w
+title.subscription.request = Pro\u015bba o dodanie
+title.certificate = Certyfikat
 
 tooltip.place.a.call = Zadzwo\u0144 do tej osoby
 tooltip.appearance = Zmie\u0144 wygl\u0105d okna rozm\u00f3w
@@ -854,6 +910,9 @@ tooltip.start.chat = Rozpocznij rozmow\u0119
 tooltip.view.changelog = Podgl\u0105d dziennika zdarze\u0144
 tooltip.view.history = Podgl\u0105d historii rozm\u00f3w
 tooltip.view.readme = Zobacz plik readme
+tooltip.encryptionmode.required = Szyfrowanie wymagane w celu po\u0142\u0105czenia. Je\u015Bli serwer nie zapewnia szyfrowania lub negocjacje szyfrowania zako\u0144cz\u0105 si\u0119 niepowodzeniem, w\u00F3wczas po\u0142\u0105czenie z serwerem nie dojdzie do skutku.
+tooltip.encryptionmode.ifpossible = Szyfrowanie jest u\u017Cywane wtedy gdy jest to mo\u017Cliwe.
+tooltip.encryptionmode.disabled = Szyfrowanie jest wy\u0142\u0105czone i w u\u017Cyciu b\u0119d\u0105 tylko po\u0142\u0105czenia nieszyfrowane. Je\u015Bli szyfrowanie jest wymagane przez serwer, po\u0142\u0105czenie nie powiedzie si\u0119.
 
 tree.conference.services = Us\u0142ugi konferencyjne
 tree.users.in.room = U\u017cytkownicy w pokoju
@@ -921,3 +980,131 @@ action.viewlog=Zobacz plik logu
 dialog.confirm.to.reveal.visibility.title=Jeste\u015b pewny?
 dialog.confirm.to.reveal.visibility.msg=Je\u015bli b\u0119dziesz kontynuowa\u0142, Twoja niewidoczno\u015b\u0107 zostanie wy\u0142\u0105czona
 dialog.confirm.close.all.conferences.if.invisible.msg=Je\u015bli b\u0119dziesz kontynuowa\u0142 wszystkie pokoje konferencyjne zostan\u0105 zamkni\u0119te
+dialog.certificate.provide.alias.and.confirm = \t Dodaj alias do zaufanych. \n Jeste\u015B pewny czy chcesz doda\u0107 ten \n certyfikat do Twoich zaufanych?
+dialog.certificate.show = <html>To jest certyfikat, kt\u00F3ry pr\u00F3bujesz doda\u0107 do zaufanych. <br><br> Po jego dodaniu Spark b\u0119dzie m\u00F3g\u0142 nawi\u0105zywa\u0107  bezpieczn\u0105 komunikacj\u0119 <br> z serwerami, kt\u00F3re s\u0105 identyfikowane przez ten certyfikat. <br><br> Je\u015Bli jeste\u015B pewny, \u017Ce chcesz doda\u0107 ten certyfikat kliknij OK.</html>
+dialog.certificate.cannot.have.copy = Ten certyfikat jest ju\u017C w magazynie zaufanych.
+dialog.certificate.has.been.added = Certyfikat zosta\u0142 dodany do magazynu zaufanych.
+dialog.certificate.is.distrusted = Certyfikat jest nieprawid\u0142owy i nie powinien by\u0107 zaufanym poniewa\u017C jest to ryzykowne. \n Je\u015Bli pomimo tego chcesz doda\u0107 go do zaufanych, kliknij przycisk lub dodaj go do listy wyj\u0105tk\u00F3w.
+dialog.certificate.sure.to.delete = Czy jeste\u015B pewny, \u017Ce chcesz usun\u0105\u0107 ten certyfikat? \n Je\u015Bli to zrobisz nie b\u0119dziesz w stanie nawi\u0105za\u0107 bezpiecznego po\u0142\u0105czenia \n z serwerami identyfikowanymi przez ten certyfikat.
+dialog.certificate.has.been.deleted = Certyfikat zosta\u0142 pomy\u015Blnie usuni\u0119ty.
+
+cert.valid = Wa\u017Cny
+cert.revoked = Uniewa\u017Cniony
+cert.expired = Wygas\u0142y
+cert.not.valid.yet = Jeszcze niewa\u017Cny
+cert.self.signed = Samopodpisany
+cert.unknown.oid = Nieznany opis OID.
+cert.is.critical = Jest krytyczny: 
+cert.critical = Krytyczny:
+cert.not.critical = Niekrytyczny: 
+
+cert.extensions = Rozszerzenia certyfikat\u00F3w:
+cert.extensions.unsupported = Nieobs\u0142ugiwane rozszerzenia
+cert.extension.extended.usage.digital.signature = Podpis cyfrowy
+cert.extension.extended.usage.non.repudiation = Nieodrzucony
+cert.extension.extended.usage.key.encipherment = Szyfrowanie klucza
+cert.extension.extended.usage.data.encipherment = Szyfrowanie danych
+cert.extension.extended.usage.key.agreement = Zgodno\u015B\u0107 klucza
+cert.extension.extended.usage.key.cert.sign = Podpis kluczem szyfruj\u0105cym
+cert.extension.extended.usage.crl.sign = Podpis CRL
+cert.extension.extended.usage.encipher.only = Tylko szyfrowane
+cert.extension.extended.usage.decipher.only = Tylko odszyfrowane
+cert.extension.basic.constraints.is.ca = Czy jest urz\u0105d certyfikacji
+cert.extension.basic.constraints.path.length = D\u0142ugo\u015B\u0107 \u015Bcie\u017Cki walidacji
+cert.extension.name.constraints.permitted.subtrees = W\u0142\u0105czone podkategorie
+cert.extension.name.constraints.excluded.subtrees = Wy\u0142\u0105czone podkategorie
+
+##OID's mapping
+2.5.29.1 = X.509 old Authority Key Identifier.
+2.5.29.2 = Key attributes.
+2.5.29.3 = Certificate policies.
+2.5.29.4 = Key usage restrictions.
+2.5.29.5 = Policy mapping.
+2.5.29.6 = Subtree constraints.
+2.5.29.7 = Subject alternative name.
+2.5.29.8 = Issuer alternative name.
+2.5.29.9 = Subject directory attributes.
+2.5.29.10 = Basic constraints.
+2.5.29.11 = Certificate Extension
+2.5.29.12 = Certificate Extension
+2.5.29.13 = Certificate Extension
+2.5.29.14 = Subject key identifier.
+2.5.29.15 = Key usage.
+2.5.29.16 = Private key usage period. 
+2.5.29.17 = Subject alternative name.
+2.5.29.18 =
+2.5.29.19 = Basic constraints.
+2.5.29.20 = CRL number.
+2.5.29.21 = Reason code.
+2.5.29.22 = Expiration date.
+2.5.29.23 = Hold instruction code. 
+2.5.29.24 = Invalidity date.
+2.5.29.25 = CRL Distribution Points.
+2.5.29.26 = Issuing distribution point.
+2.5.29.27 = CRL indicator. 
+2.5.29.28 = Issuing distribution point.
+2.5.29.29 = Certificate issuer. 
+2.5.29.30 = Name constraints.
+2.5.29.31 = CRL distribution points. 
+2.5.29.32 = Certificate policies. 
+2.5.29.33 = Policy mappings.
+2.5.29.34 = Policy constraints.
+2.5.29.35 = Authority key identifier. 
+2.5.29.36 = Policy constraints.
+2.5.29.37 = Extended key usage.
+2.5.29.38 = Authority attribute identifier.
+2.5.29.39 = Role specification certificate identifier.
+2.5.29.40 = CRL stream identifier.
+2.5.29.41 = basicAttConstraints.
+2.5.29.42 = Delegated Name Constraints.
+2.5.29.43 = Time specification.
+2.5.29.44 = CRL scope.
+2.5.29.45 = Status referrals.
+2.5.29.46 = Freshest CRL.
+2.5.29.47 = Ascending order list in CRL.
+2.5.29.48 = Attribute descriptor.
+2.5.29.49 = User notice.
+2.5.29.50 = SOA identifier.
+2.5.29.51 = Base CRL update time.
+2.5.29.52 = Acceptable certificate policies.
+2.5.29.53 = Delta info.
+2.5.29.54 = Inhabit any-policy.
+2.5.29.55 = Targeting information.
+2.5.29.56 = No revocation information available.
+2.5.29.57 = Acceptable privilege policies.
+2.5.29.58 = id-ce-toBeRevoked.
+2.5.29.59 = id-ce-RevokedGroups.
+2.5.29.60 = id-ce-expiredCertsOnCRL. 
+2.5.29.61 = Indirect issuer.
+2.5.29.62 = id-ce-noAssertion 
+2.5.29.63 = id-ce-aAissuingDistributionPoint 
+2.5.29.64 = id-ce-issuedOnBehaIFOF 
+2.5.29.65 = id-ce-singleUse 
+2.5.29.66 = id-ce-groupAC
+2.5.29.67 = id-ce-allowedAttAss
+2.5.29.68 = id-ce-attributeMappings 
+2.5.29.69 = id-ce-holderNameConstraints 
+
+2.16.840.1.113730.1.1 =
+1.3.6.1.4.1.311.20.2 = szOID_ENROLL_CERTTYPE_EXTENSION
+1.3.6.1.4.1.311.21.1 = MS Certificate Services CA Version 
+1.2.840.113533.7.65.0 = Entrust version extension
+1.3.6.1.5.5.7.1.1 = Certificate authority information access
+1.3.6.1.5.5.7.3.1 = Certificate can be used as a Secure Sockets Layer (SSL) server certificate.
+1.3.6.1.5.5.7.3.2 = Certificate can be used as a Secure Sockets Layer (SSL) client certificate.
+1.3.6.1.5.5.7.3.3 = Certificate can be used for code signing.
+1.3.6.1.5.5.7.3.4 = Certificate can be used for protecting email (signing, encryption, key agreement). 
+1.3.6.1.5.5.7.3.5 = Internet Protocol SECurity (IPSEC) end system certificate. 
+1.3.6.1.5.5.7.3.6 = Internet Protocol SECurity (IPSEC) tunnel certificate. 
+1.3.6.1.5.5.7.3.7 = Internet Protocol SECurity (IPSEC) user certificate.
+1.3.6.1.5.5.7.3.8 = PKIX key purpose time stamping. Certificate can be used to bind the hash of an object to a time from a trusted time source.
+
+1.3.6.1.5.5.7.3.9 = Rec. ITU-T X.509 certificates corresponding private key may be used by an authority to sign OCSP-Responses.
+1.3.6.1.5.5.7.3.10 = PKIX key purpose Data Validation and Certification Server Protocols.
+1.3.6.1.5.5.7.3.11 = sbgpCertAAServerAuth. 
+1.3.6.1.5.5.7.3.12 = id-kp-scvp-responder key purpose.
+1.3.6.1.5.5.7.3.13 = id-kp-eapOverPPP
+
+1.3.6.1.5.5.7.1.12 = id-pe-logotype 
+1.3.6.1.4.1.311.10.3.4 = Automatically extracted from Object IDs Associated with Microsoft Cryptography.
+2.23.42.7.0 = Hashed Root Key
