Fixes in i18n file, removes citation mark.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -1196,8 +1196,8 @@ dialog.certificate.sure.to.delete = Are you sure that you want to delete this ce
 dialog.certificate.has.been.deleted = Certificate has been successfully deleted.
 dialog.self.signed.certificate.has.been.created = Self signed certificate and private key has been created in directory: \n
 dialog.certificate.request.has.been.created = Certificate Sign Request and private key has been created in directory: \n
-dialog.cannot.upload.certificate.might.be.ill.formated = "Cannot upload certificate file: Certificate might me ill formated"
-dialog.cannot.upload.certificate = "Cannot upload certificate file"
+dialog.cannot.upload.certificate.might.be.ill.formated = Cannot upload certificate file: Certificate might me ill formated
+dialog.cannot.upload.certificate = Cannot upload certificate file
 
 cert.valid = Valid
 cert.revoked = Revoked
