SPARK-2000 Default Settings and lacking resource for mutual.auth

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -963,6 +963,7 @@ tab.proxy = Proxy
 tab.sso = SSO
 tab.pki = PKI
 tab.certificates = Certificates
+tab.mutual.auth = Mutual auth
 title.about = About
 title.advanced.connection.preferences = Advanced connection preferences
 title.account.create.registration = Account registration
