SPARK-1974 More LT translations

--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -896,6 +896,7 @@ tab.business = Darboviet\u0117
 tab.conferences = Konferencijos
 tab.contacts = Adresin\u0117
 tab.general = Bendra
+tab.security = Saugumas
 tab.home = Namai
 tab.installed.plugins = \u012ediegti priedai
 tab.deactivated.plugins = I\u0161jungti priedai
@@ -909,7 +910,7 @@ title.about = Apie
 title.password.required = Reikalingas slapta\u017eodis
 title.task.notification = Prane\u0161imas apie u\u017eduot\u012f
 title.client.logs = \u017durnalo \u012fra\u0161ai
-title.advanced.connection.preferences = P&risijungimo nuostatos i\u0161samiau
+title.advanced.connection.preferences = Prisijungimo nuostatos i\u0161samiau
 title.account.create.registration = Paskyros registravimas
 title.bookmarks = \u017dymos
 title.account.created = Paskyra s\u0117kmingai sukurta
