SPARK-1974 More LT translations - fix EN

--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -351,10 +351,13 @@ checkbox.accept.all.certificates = Priimti visus sertifikatus (self-signed/negal
 checkbox.disable.hostname.verification = I\u0161jungti sertifikato vardo patikrinim\u0105 (nerekomenduojama)
 checkbox.accept.all = Priimti visus
 checkbox.accept.expired = Priimti su pasibaigusia galiojimo data
+checkbox.accept.not.valid.yet = Priimti dar negaliojan\u010dius
 checkbox.accept.self.signed = Priimti "self-signed"
+checkbox.accept.revoked = Priimti at\u0161auktus
 checkbox.accept.invalid = Priimti negaliojan\u010dius
 checkbox.check.crl = Patikrinti CRL
 checkbox.check.ocsp = Patikrinti OCSP
+checkbox.allow.soft.fail = Leisti "soft fail" politik\u0105
 checkbox.on.exception.list = I\u0161im\u010di\u0173 s\u0105ra\u0161e
 radio.encryptionmode.required = Privaloma
 radio.encryptionmode.ifpossible = Jeigu \u012fmanoma
