--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -401,6 +401,7 @@ checkbox.check.crl = Check CRL
 checkbox.check.ocsp = Check OCSP
 checkbox.allow.soft.fail = Allow soft fail policy
 checkbox.on.exception.list = On the exception list
+checkbox.filetransfer.ibb.only = In-Band Bytestreams Only
 radio.encryptionmode.required = Required
 radio.encryptionmode.ifpossible = If possible
 radio.encryptionmode.disabled = Disabled
