SPARK-2014, SPARK-2015 Rename and add translations

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -485,7 +485,7 @@ label.new.nickname = New nickname
 label.nickname = Nickname
 label.number = Number
 label.ok = OK
-label.old.ssl = Use old SSL port method
+label.old.ssl = Use Direct TLS method
 label.os = Operating system
 label.pager = Pager
 label.password = &Password
