--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -359,6 +359,7 @@ checkbox.check.crl = Patikrinti CRL
 checkbox.check.ocsp = Patikrinti OCSP
 checkbox.allow.soft.fail = Leisti "soft fail" politik\u0105
 checkbox.on.exception.list = I\u0161im\u010di\u0173 s\u0105ra\u0161e
+checkbox.filetransfer.ibb.only = Naudoti tik In-Band Bytestreams
 radio.encryptionmode.required = Privaloma
 radio.encryptionmode.ifpossible = Jeigu \u012fmanoma
 radio.encryptionmode.disabled = I\u0161jungta
@@ -443,7 +444,7 @@ label.new.nickname = Naujas pseudonimas
 label.nickname = Pseu&donimas
 label.number = &Numeris
 label.ok = Gerai
-label.old.ssl = &Naudoti sen\u0105 SSL prievado metod\u0105
+label.old.ssl = &Naudoti Direct TLS metod\u0105
 label.os = &Operacin\u0117 sistema
 label.pager = Prane\u0161im\u0173 &gaviklis
 label.password = S&lapta\u017eodis
