SPARK-2001 Add popup for accepting certiifcate from connection.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -1200,6 +1200,8 @@ dialog.self.signed.certificate.has.been.created = Self signed certificate and pr
 dialog.certificate.request.has.been.created = Certificate Sign Request and private key has been created in directory: \n
 dialog.cannot.upload.certificate.might.be.ill.formated = Cannot upload certificate file: Certificate might me ill formated
 dialog.cannot.upload.certificate = Cannot upload certificate file
+dialog.certificate.title.certificate.not.in.truststore = Certificate presented wasn't in the your Truststore
+dialog.certificate.click.yes.if.you.want.to.see.certificate = If you want to see and add certificate presented by the server \n to which you are trying to connect click YES.
 
 cert.valid = Valid
 cert.revoked = Revoked
