SPARK-1974 fix EN, update LT translations

--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -1129,11 +1129,18 @@ dialog.confirm.to.reveal.visibility.msg = Jeigu t\u0119site, j\u016bs\u0173 nema
 dialog.confirm.close.all.conferences.if.invisible.msg = Jeigu t\u0119site, visi konferencij\u0173 kambariai bus u\u017edaryti
 dialog.certificate.provide.alias.and.confirm = \t Suteikite vard\u0105 Truststore \u012fra\u0161ui. \n Ar tikrai norite prid\u0117ti ?\u012f \n sertifikat\u0105 \u012f j\u016bs\u0173 Truststore?
 dialog.certificate.show = <html>Tai sertifikatas kur\u012f bandote prid\u0117ti \u012f Truststore. <br><br> Po \u0161io sertifikato \u012ftraukimo Spark gal\u0117s u\u017emegzti apsaugot\u0105 <br> ry\u0161\u012f su serveriais kurie identifikuojami su \u0161iuo sertifikatu. <br><br> Jei esate tikri, kad norite prid?ti \u0161\u012f sertifikat\u0105, paspauskite OK mygtuk\u0105.</html>
+dialog.certificate.add.from.connection = <html>Tai sertifikatas, kur\u012f pateik\u0117 serveris prie kurio bandote prisijungti.<br> \u0160is sertifikatas n\u0117ra \u012ftrauktas \u012f j\u016bs\u0173 TrustStore, kas rei\u0161kia, kad juo dar nepasitikite<br> ir tod\u0117l negalite prisijungti prie serverio. <br><br> Ar norite pasitik\u0117ti juo ir \u012ftraukti \u0161\u012f sertifikat\u0105 \u012f j\u016bs\u0173 TrustStore?</html>
 dialog.certificate.cannot.have.copy = \u0160is sertifikatas jau yra patalpintas Truststore.
 dialog.certificate.has.been.added = Sertifikatas prid\u0117tas \u012f Truststore.
 dialog.certificate.is.distrusted = Sertifikatas negaliojantis, tod\u0117l jo nereik\u0117t\u0173 pasitik\u0117ti, nes tai gali b\u016bti pavojinga. \n Jei vis tiek norite j\u012f priimti, spauskite Trust mygtuk\u0105 arba prid\u0117kite j\u012f \u012f i\u0161im?i\u0173 s\u0105ra\u0161\u0105.
 dialog.certificate.sure.to.delete = Ar tikrai norite i\u0161trinti \u0161\u012f sertifikat\u0105? \nJeigu tai padarysite, negal?\u0117site u\u017emegzti saugaus ry\u0161io \nsu serveriais identifikuojamais \u0161iuo sertifikatu.
 dialog.certificate.has.been.deleted = Sertifikatas s\u0117kmingai i\u0161trintas.
+dialog.self.signed.certificate.has.been.created = Paties pasira\u0161ytas sertifikatas ir privatus raktas buvo sukurti direktorijoje: \n
+dialog.certificate.request.has.been.created = Sertifikato pasirašymo u\u017eklausa ir privatus raktas buvo sukurti direktorijoje: \n
+dialog.cannot.upload.certificate.might.be.ill.formated = Ne\u012fmanoma \u012fkelti sertifikato, sertifikatas gali b\u016bti blogai suformuotas
+dialog.cannot.upload.certificate = Ne\u012fmanoma \u012fkelti sertifikato bylos
+dialog.certificate.title.certificate.not.in.truststore = Pateiktas sertifikatas n\u0117ra j\u016bs\u0173 TrusStore
+dialog.certificate.click.yes.if.you.want.to.see.certificate = Jei norite per\u017ei\u016br\u0117ti ir prid\u0117ti sertifikat\u0105 pateikt\u0105 serverio\n prie kurio bandote jungtis, spauskite TAIP.
 
 cert.valid = Galiojantis
 cert.revoked = At\u0161auktas
